--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
   <mat-icon>local_fire_department</mat-icon>
   <span>Kanban Pano</span>
 </mat-toolbar>
+
+<app-task *ngFor="let task of todo" [task]="task"></app-task>
