--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,3 +61,17 @@
 <!-- cdkDropListData veri listesi belirtmemize izin veren drop list inputu -->
 <!-- cdkDropListConnectedTo - mevcut diğer cdkDropList'lere referanslar cdkDropList'e bağlı. Bu inputu ayarlayarak, öğeleri başka hangi listelere bırakabileceğimizi belirtiriz.
 -->
+
+<!-- YENİ GÖREVLER EKLEYEBİLME -->
+
+<div class="content-wrapper">
+  <button (click)="newTask()" mat-button>
+    <mat-icon>add</mat-icon>Add Task
+
+  </button>
+  <div class="container-wrapper">
+    <div class="container">
+      
+    </div>
+  </div>
+</div>
