--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -37,3 +37,11 @@ app-new-task {
   text-align: center;
   opacity: 0.2;
 }
+
+.cdk-drag-animating {
+  transition: transform 250ms;
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
