--- a/src/app/task-dialog/task-dialog.component.html
+++ b/src/app/task-dialog/task-dialog.component.html
@@ -1,19 +1,32 @@
 <mat-form-field>
-    <mat-label>Title</mat-label>
-    <input matInput cdkFocusInitial [(ngModel)]="data.task.title" />
-  </mat-form-field>
-  
-  <mat-form-field>
-    <mat-label>Description</mat-label>
-    <textarea matInput [(ngModel)]="data.task.description"></textarea>
-  </mat-form-field>
-  
-  <div mat-dialog-actions>
-    <button mat-button [mat-dialog-close]="{ task: data.task }">OK</button>
-    <button mat-button (click)="cancel()">Cancel</button>
-  </div>
+  <mat-label>Title</mat-label>
+  <input matInput cdkFocusInitial [(ngModel)]="data.task.title" />
+</mat-form-field>
 
+<mat-form-field>
+  <mat-label>Description</mat-label>
+  <textarea matInput [(ngModel)]="data.task.description"></textarea>
+</mat-form-field>
 
-  <!-- NOTLAR -->
-  <!-- data: AppComponentdeki dialog'un open methoduna iletilen veridir. -->
-  <!-- [(ngModel)]: iki yönlü veri bağlama: kullanıcı inputtaki değeri değiştirdiğinde task ın başlık ve açıklmasını da güncelleyebilmek için kullanılır  -->
+<div mat-dialog-actions>
+  <button mat-button [mat-dialog-close]="{ task: data.task }">OK</button>
+  <button mat-button (click)="cancel()">Cancel</button>
+</div>
+
+<!-- NOTLAR -->
+<!-- data: AppComponentdeki dialog'un open methoduna iletilen veridir. -->
+<!-- [(ngModel)]: iki yönlü veri bağlama: kullanıcı inputtaki değeri değiştirdiğinde task ın başlık ve açıklmasını da güncelleyebilmek için kullanılır  -->
+
+<div mat-dialog-actions>
+  <button
+    *ngIf="data.enableDelete"
+    mat-fab
+    color="primary"
+    aria-label="Delete"
+    [mat-dialog-close]=""
+    {task:data.task,
+    delete:true}
+  >
+    <mat-icon>delete</mat-icon>
+  </button>
+</div>
