--- a/src/app/task-dialog/task-dialog.component.html
+++ b/src/app/task-dialog/task-dialog.component.html
@@ -23,9 +23,7 @@
     mat-fab
     color="primary"
     aria-label="Delete"
-    [mat-dialog-close]=""
-    {task:data.task,
-    delete:true}
+    [mat-dialog-close]="{ task: data.task, delete: true }"
   >
     <mat-icon>delete</mat-icon>
   </button>
